force-app/main/default/objects/Document_Agent_Force_Validation__c/Document_Agent_Force_Validation__c.object-meta.xml
<CustomObject>
    <description>This object stores agent force prompt instructions in Task , Desired Output and Optional text.</description>
    <label>Document Agent Force Validation</label>
    <nameField>
        <displayFormat>DV-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Validation Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document  Agent Force Validation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>