force-app/main/default/objects/Document_Agent_Force_Validation__c/fields/Desired_Output__c.field-meta.xml
<CustomField>
    <fullName>Desired_Output__c</fullName>
    <label>Desired Output</label>
    <length>255</length>
    <type>Text</type>
</CustomField>