force-app/main/default/objects/Document_Agent_Force_Validation__c/fields/Document_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Sub_Type__c</fullName>
    <label>Document Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>