force-app/main/default/objects/Document_Agent_Force_Validation__c/fields/FieldSet_Name__c.field-meta.xml
<CustomField>
    <fullName>FieldSet_Name__c</fullName>
    <label>FieldSet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>