force-app/main/default/objects/Document_Agent_Force_Validation__c/fields/Optional_Context__c.field-meta.xml
<CustomField>
    <fullName>Optional_Context__c</fullName>
    <label>Optional Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>