force-app/main/default/objects/Document_Agent_Force_Validation__c/fields/Task_Details__c.field-meta.xml
<CustomField>
    <fullName>Task_Details__c</fullName>
    <label>Task Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>